fix: spacing changes, flipping images, arrow beh

--- a/styles.css
+++ b/styles.css
@@ -112,7 +112,7 @@ body {
 
 .hover-img {
   display: none;
-  position: absolute;
+  position: fixed;
   height: 45vh;
   opacity: 95%;
   border: black 1px solid;
@@ -167,7 +167,6 @@ body {
 .tab-details tr .type {
   border-left: 1px solid grey;
   border-right: 1px solid grey;
-  display: 10px;
   transition: width 0.3s ease-in-out;
 }
 
@@ -191,7 +190,6 @@ body {
   cursor: default;
   font-family: "medium", sans-serif;
   color: black;
-  font-weight: 100px;
   cursor: pointer;
   background-color: #fafafa;
 }
@@ -236,11 +234,16 @@ body {
 }
 
 .project-text td {
-  padding: 20px 20px;
+  /* margin: 20px 20px; */
+  padding: 15px 5px 15px 15px;
   line-height: 30px;
   font-family: "light", sans-serif;
   vertical-align: top;
   color: darkgrey;
+}
+
+.project-text .date {
+  width: 50px;
 }
 
 .abstract {
@@ -348,25 +351,51 @@ body {
   min-width: 100%;
   min-height: 100%;
   background-color: rgba(255, 255, 255, 0.8);
-
+  cursor: pointer;
   display: none;
+  pointer-events: visibleFill;
 }
 
-#lightbox-img {
-  height: auto;
-  width: auto;
-  border: 1px solid lightgrey;
-  cursor: pointer;
+#lightbox-container {
+  height: 85%;
+  width: 85%;
   transition: height .2s ease;
   z-index: 100;
   position: fixed;
   top: 50%;
   left: 50%;
-  transform: translate(-50%, -50%);
-  z-index: 100;
-  max-width: 85%;
-  max-height: 85%;
+  transform: translate(-50%, -50%) scale(100%);
+  z-index: 105;
+  overflow: scroll;
+  transition: 0.3s ease-in-out;
+  display: flex;
+  -ms-overflow-style: none;
+  scrollbar-width: none;
+}
+
+#lightbox-container::-webkit-scrollbar {
   display: none;
+}
+
+#lightbox-img {
+  margin: auto auto;
+  height: auto;
+  width: auto;
+  border: 1px solid lightgrey;
+  cursor: zoom-in;
+  transition: height .2s ease;
+  z-index: 100;
+  align-items: center;
+  /* position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%) scale(100%); */
+  z-index: 100;
+  max-width: 100%;
+  max-height: 100%;
+  /* transition: 0.3s ease-in-out; */
+  /* display: none; */
+  /* overflow: scroll; */
 }
 
 .show {
@@ -416,9 +445,17 @@ body {
   .title {
     max-width: 350px;
   }
+
+  .abstract {
+    width: 100%;
+  }
+
+  .additional-description {
+    display: none;
+  }
 }
 
-@media screen and (max-width: 700px) {
+@media screen and (max-width: 725px) {
   #page-title {
     display: none;
   }
@@ -448,14 +485,6 @@ body {
   }
 
   .type {
-    display: none;
-  }
-
-  .abstract {
-    width: 100%;
-  }
-
-  .additional-description {
     display: none;
   }
 
